# yggdrasil

./: .gitignore  Cargo.toml  README.md  build.sh
assets/sounds/: Eff2.m4a  Eff3.m4a
assets/sprites/: player.blend  player.blend1  player.glb  player2.blend  player2.blend1  player3.blend  player3.blend1  player3.glb  untitled.blend  untitled.blend1
crates/rcon-server/: Cargo.toml
crates/rcon-server/examples/: server.rs
crates/rcon-server/src/: lib.rs
crates/test_bytes/: Cargo.toml
crates/test_bytes/src/: main.rs
crates/yserde/: Cargo.toml  README.md
crates/yserde/examples/: derive.rs
crates/yserde/src/: lib.rs  tests.rs
crates/yserde_bytes/: Cargo.toml
crates/yserde_bytes/src/: as_bytes.rs  format_enum_fields.rs  from_buf.rs  get_size.rs  lib.rs  parse_field.rs
crates/yserde_derive/: Cargo.toml
crates/yserde_derive/src/: as_bytes.rs  from_bytes.rs  lib.rs
crates/ysync/: Cargo.toml  ConnectionSchema.rnote  UdpStuff.rnote  YPackage structure.jex
crates/ysync/examples/: as_bytes.rs  client.rs  server.rs
crates/ysync/src/: lib.rs  safe_udp.rs  save_udp.rs  tcp_types.rs  tests.rs  udp_types.rs
crates/ysync/src/client/: mod.rs  tcp_handler.rs  udp_handler.rs
crates/ysync/src/server/: mod.rs  tcp_handler.rs  udp_handler.rs
crates/ysync/src/server/manager/: client_manager.rs  game_manager.rs  mod.rs
src/: commands.rs  main.rs
src/audio/: mod.rs
src/game/: client_mode.rs  components.rs  controll_systems.rs  host_mode.rs  mod.rs  systems.rs
src/game/base/: animations.rs  camera.rs  components.rs  cursor.rs  light.rs  misc_systems.rs  mod.rs  npcs.rs  player_ctrl.rs  players.rs  projectiles.rs  resources.rs  scene_setup.rs
src/game/base/players/: mod.rs  player_ctrl.rs
src/game/hud/: debug.rs  mod.rs
src/game/online/: client.rs  events.rs  host.rs  mod.rs  receive_events.rs  resource.rs  share_events.rs
src/game_base/: components.rs  controll_systems.rs  mod.rs  systems.rs
src/game_client/: mod.rs
src/ui/: chat.rs  components.rs  helper.rs  mod.rs
src/ui/lobby/: awaiting_join_permission.rs  con_selection.rs  load_game.rs  mod.rs
src/ui/lobby/con_menu/: connecting.rs  mod.rs
src/ui/lobby/in_lobby/: build_ui.rs  interaction.rs  mod.rs  (+1 more)
ysync/: Cargo.toml  ConnectionSchema.rnote  YPackage structure.jex
ysync/src/: lib.rs
ysync/src/client/: mod.rs  tcp_handler.rs
ysync/src/server/: mod.rs
ysync/yclient/: Cargo.toml
ysync/yclient/src/: main.rs
ysync/yserver/: Cargo.toml
ysync/yserver/src/: main.rs
(+2 files in other folders)
