[package]
name = "yggdrasil"
version = "0.1.0"
edition = "2021"

[dependencies]
autocomplete = "0.1.3"
bevy = { version = "0.14.2", features = ["wayland"] }
bevy_embedded_assets = "0.11.0"
bevy_rapier3d = { version = "0.27.0", features = ["debug-render-3d", "simd-stable"] }
crossbeam = "0.8.4"
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread"] }
ysync = { path = "ysync" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
