[package]
name = "yggdrasil"
version = "0.1.0"
edition = "2021"

[dependencies]
autocomplete = "0.1.3"
bevy = { version = "0.14.2", features = ["serialize", "wayland"] }
bevy_embedded_assets = "0.11.0"
bevy_rapier3d = { version = "0.27.0", features = ["debug-render-3d", "simd-stable"] }
crossbeam = "0.8.4"
ron = "0.8.1"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread"] }
ysync = { path = "crates/ysync" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
